# verifier-sdk-rs

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
src/: credentials.rs  crypto.rs  lib.rs  outcome.rs
src/verify/: helpers.rs  mod.rs
