[package]
name = "verifier_sdk"
version = "0.1.0"
edition = "2021"
authors = ["Spruce Systems, Inc."]
license = "Apache-2.0 OR MIT"
description = "Verifier SDK Rust"
repository = "https://github.com/spruceid/verifier-sdk-rs/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cose-rs = { git = "https://github.com/spruceid/cose-rs", rev = "0018c9b", features = [
    "time",
] }
miniz_oxide = "0.7.2"
num-bigint = "0.4.4"
num-traits = "0.2.19"
serde_cbor = { version = "0.11.2", features = ["tags"] }
signature = "2.2.0"
time = { version = "0.3.36", features = ["macros", "formatting", "parsing"] }
time-macros = "0.2.18"
uniffi = { version = "0.27", features = ["cli"] }
x509-cert = { version = "0.2.5" }
ssi-status = { git = "https://github.com/spruceid/ssi.git", rev = "157fb00" }
serde_json = { version = "1.0.120" }

[build-dependencies]
uniffi = { version = "0.27", features = ["build"] }
